Con formulario y completo

--- a/M1U3/ejemplo01.html
+++ b/M1U3/ejemplo01.html
@@ -10,38 +10,54 @@
 
 <body>
     <!-- esto es un comentario-->
-    <h1>hola soy un titulo</h1>
-    <h2>hola soy un subtitulo</h2>
-    <h3>encabezado 3</h3>
-    <h4>encabezado 4</h4>
-    <h5>encabezado 5</h5>
-    <h6>último encabezado</h6>
+    <h1>Santiago Fenochio</h1>
+
+    <img src="familia.jpg" alt="familia">
+
+    <h2>Tengo 23 años</h2>
+    <h3>Soy de Villa Ballester</h3>
+    <h4>Mis series preferidas son:</h4>
+    <ul>
+        <li>Prison break</li>
+        <li>Breaking bad</li>
+        <li>the boys</li>
+    </ul>
+    <h5>Mis comidas favoritas son:</h5>
+    <ol>
+        <li>Milanesa</li>
+        <li>fideos</li>
+        <li>asado</li>
+        <li>sushi y pescado</li>
+    </ol>
+    <h6>Perfil</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sit culpa deserunt delectus nam molestias
         perspiciatis. Alias dolores, eligendi totam illo rerum eveniet dolor, nulla repudiandae id voluptatibus atque
         enim.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, voluptate tenetur alias a mollitia maiores dolor
         impedit culpa voluptatibus, quos assumenda atque incidunt, exercitationem eaque recusandae necessitatibus at
         consectetur harum!</p>
-    <h3>ejemplos listas</h3>
-    <ul>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-    </ul>
-    <ol>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-    </ol>
-    <h3>etiqueta de vinculación</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ut eligendi laborum! Non est corporis libero
-        quos harum, amet soluta, accusamus velit mollitia, ratione reprehenderit ab ex impedit sapiente fugiat.<a
-            href="https://www.youtube.com/" target="_blank">AQUÍ</a></p>
+        quos harum, amet soluta, accusamus velit mollitia, ratione reprehenderit ab ex impedit sapiente fugiat.
 
 
-    <h3>Trabajamos con imagenes</h3>
-    <img src="familia.jpg" alt="">
-    <img src="img/Handball.JPG" alt="Handball">
+    <h3>Para contactarme completa el siguiente <a href="https://www.youtube.com/" target="_blank">formulario</a></p>
+        <form action="formulario">
+            <p>
+                <label for="nom">Nombre</label>
+                <input type="text" name="nombre" />
+            </p>
+            <p>
+                <input type="text" name="apellido" placeholder="apellido">
+            </p>
+            <p>
+                <label for="pass">Contraseña</label>
+                <input type="password" name="pass">
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Borrar">
+            </p>
+        </form>
 
 
 </body>
